# sphinx-code-highlighter

./: .buildinfo  README.md  genindex.html  install.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflow/: docs.yml
.github/workflows/: docs.yml
_sources/: install.md  intro.md  usage.ipynb
code_highlighter/: pygmantize.py
docs/: .requirements.txt  _config.yml  _toc.yml  usage.md
tests/: __init__.py  conftest.py  test_directive.py  test_pygmantize.py
tests/roots/test-book/: _config.yml  _toc.yml  myst-demo.md  rst-demo.rst
tests/roots/test-code/: dwarves.py  for-loop.py
tests/roots/test-docs/: conf.py  index.rst
tools/: highlight
