[tool.poetry]
name = "sphinx-code-highlighter"
version = "0.1.0"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
packages = [ { include = "code_highlighter" } ]

[tool.poetry.dependencies]
python = "^3.8"
Pygments = "^2.9.0"
jupyter-book = "^0.10.2"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
